<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >
    


    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_status_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>



    <ScrollView
        android:id="@+id/login_form"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
    <!-- 标题栏 -->
    <LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="50dp">
        
	    <TextView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title"
        android:gravity="center"
        android:paddingBottom="4dp"

        
        android:shadowColor="#ff000000"
	    android:shadowDx="2"
	    android:shadowDy="2"
	    android:shadowRadius="1"
        
        android:text="ONE"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif" />
	</LinearLayout>
    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"	    
		    
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin">
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:textColor="@color/black"
		        android:text="@string/loginhint" />
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="6dp"
		        android:background="@drawable/login_style"
		        android:orientation="vertical">
			    <EditText 
			        android:id="@+id/login_username"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/textshape_style"
			        android:layout_margin="5dp"
			        android:hint="@string/login_username" />
			    
			    <include
		            android:layout_width="fill_parent"
		            android:layout_height="2dp"
		            layout="@layout/line" >
		        </include>
		        
			    <EditText 
			        android:id="@+id/login_password"
			        android:inputType="textPassword"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/textshape_style"
			        android:layout_margin="5dp"
			        android:hint="@string/login_password" />
		        
		    </LinearLayout>
		    
		    
		    
		    <Button 
		        android:id="@+id/bt_login"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_login_style"
		        android:layout_gravity="right"
		        android:textSize="18sp"
		        android:layout_margin="5dp"
		        android:padding="10dp"
		        android:textColor="#FFFFFF"
		        android:text="@string/bt_login"
		        />
			<Button 
		        android:id="@+id/toRegister"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_click_style"
		        android:textColor="@color/black"
		        android:onClick="toregister"
		        android:layout_gravity="end"
		        android:layout_margin="5dp"	
		        android:padding="10dp"
		        android:textSize="18sp"	        
		        android:text="@string/toRegister"
		        /> 
		        
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="14sp"
			    android:textColor="@color/black"
			    android:text="@string/login_term"
			    />
		</LinearLayout>
</LinearLayout>
    </ScrollView>


</merge>