<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity" >

    <!-- Register progress -->

    <LinearLayout
        android:id="@+id/register_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="正在注册..."
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

	<ScrollView
        android:id="@+id/register_form"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin" >
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:textColor="@color/black"
		        android:text="@string/welcome" />
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/login_style"
		        android:orientation="vertical">
		    
			    <EditText 
			        android:id="@+id/et_username"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/textshape_style"
			        android:layout_margin="5dp"
			        android:hint="@string/et_username" />
			    <include
		            android:layout_width="fill_parent"
		            android:layout_height="2dp"
		            layout="@layout/line" >
		        </include>			    
			    <EditText 
			        android:id="@+id/et_password"
			        android:inputType="textPassword"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/textshape_style"
			        android:layout_margin="5dp"
			        android:hint="@string/et_password" />
			    <include
		            android:layout_width="fill_parent"
		            android:layout_height="2dp"
		            layout="@layout/line" >
		        </include>				    
				<EditText 
			        android:id="@+id/et_check_password"
			        android:inputType="textPassword"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/textshape_style"
			        android:layout_margin="5dp"
			        android:hint="请再次输入密码" />
			    			    
		    </LinearLayout>
		    
		    <Button 
		        android:id="@+id/bt_register"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_login_style"
		        android:textColor="@color/white"
		        android:layout_gravity="right"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp"
		        android:text="@string/bt_register"
		        android:textSize="18sp"
		        android:padding="10dp"
		        />
		    
		    <CheckBox
		        android:id="@+id/term"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/register_term"
		        android:textSize="14sp"
		        android:textColor="@color/black"
		        android:checked="true"
		        />
		    
		    
		</LinearLayout>
    </ScrollView>
</merge>