<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/comment_send"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".CommentActivity" >
    
    <!-- 标题栏 -->
    <LinearLayout 
        android:background="@drawable/title"        
        android:orientation="horizontal"
	    android:layout_width="match_parent"
        android:layout_height="50dp">
        
        <ImageView 
            android:layout_width="48dp"
            android:id="@+id/back_comment"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"/>
        
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:paddingBottom="4dp"
	        android:layout_marginRight="48dp"
	
	        
	        android:shadowColor="#ff000000"
		    android:shadowDx="2"
		    android:shadowDy="2"
		    android:shadowRadius="1"
	        
	        android:text="ONE"
	        android:textColor="#FFFFFF"
	        android:textSize="36sp"
	        android:textStyle="bold"
	        android:typeface="serif" />
	</LinearLayout>    
    
    <RelativeLayout 
        android:id="@+id/messagedetail"
        android:background="@drawable/message_style"
        android:layout_margin="3dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/detail_username"
            android:textColor="@color/black"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"  />       
        <TextView 
            android:id="@+id/comment_colon"
            android:textColor="@color/black"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/detail_username"
            android:text="@string/colon" />         
        <TextView 
            android:id="@+id/detail_content"
            android:textColor="@color/black"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"            
            android:textIsSelectable="true"
            android:layout_below="@id/detail_username" />
        <TextView 
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_content" />
        
    </RelativeLayout>
    
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_settings"
        android:background="@drawable/commentline"
        />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="3dp"	>
	    <EditText
	        android:id="@+id/et_comment"
	        android:layout_weight="7"
	        android:layout_width="0dp"
	        android:layout_height="50dp"
	        android:background="@drawable/message_style"
	        android:hint="@string/et_comment" 
        />
	    <Button 
	        android:id="@+id/bt_comment"
	        android:layout_weight="1"
	        android:background="@drawable/button_login_style"
	        android:textColor="@color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:text="@string/bt_comment"
	        />
	</LinearLayout>
    
    <ListView 
        android:id="@+id/comnent_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/background"
        android:layout_margin="3dp"
        ></ListView>
    

</LinearLayout>